# pywhlobf2

./: .envrc  CODE_OF_CONDUCT.md  LICENSE  pyrightconfig.json  setup.cfg
.github/workflows/: procedure-auto-upgrade-pyright.yaml  procedure-pull-request.yaml  procedure-release.yaml  procedure-test-every-hour.yaml  workflow-push-docker-image.yaml  workflow-push-wheel-to-pypi.yaml  workflow-test.yaml
dockerfile/: Dockerfile  entrypoint.sh  install.sh
pywhlobf/: code_file_processor.py  code_folder_processor.py  command_line_interface.py  command_line_nterface.py  execution_context.py  package_folder_processor.py  wheel_file_processor.py
pywhlobf/component/: cpp_compiler.py  cpp_generator.py  flag_setter.py  source_code_injector.py  string_literal_obfuscator.py
pywhlobf/component/string_literal_obfuscator_asset/: README.md
tests/: opt.py  test_code_file_processor.py  test_code_folder_processor.py  test_cpp_compiler.py  test_cpp_generator.py  test_package_folder_processor.py  test_poc.py  test_source_code_injector.py  test_string_literal_obfuscator.py  test_wheel_file_processor.py
