[metadata]
name = pywhlobf
version = 23.1.0.dev3
author = Hunt Zhan
author_email = huntzhan@vkit-x.com
description = todo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkit-x/pywhlobf
license = MIT

[options]
packages = find:
python_requires = >= 3.8.0, < 3.12
install_requires =
    Cython >= 0.29.28
    setuptools >= 42
    wheel >= 0.37.1
    cryptography >= 39.0.1
    fire >= 0.4.0
    iolite >= 22.1.0
    attrs >= 21.3.0
    cattrs >= 22.1.0
    pyperclip >= 1.8.2

[options.extras_require]
cython3 =
    Cython >= 3.0.0a10

dev =
    build >= 0.2.1
    # pytest-parallel is not compatible with the latest pytest.
    # https://github.com/browsertron/pytest-parallel/issues/118
    pytest >= 6.1.2, < 7.2.0
    pytest-parallel >= 0.1.1
    pytest-env >= 0.8.1
    yapf >= 0.30.0
    flake8 >= 3.8.4
    twine >= 3.2.0
    ipython >= 7.20.0
    pdbpp >= 0.10.2
    pdoc >= 12.2.0
    fireball >= 0.5.0

[options.package_data]
* = **/*.h

[options.entry_points]
console_scripts =
    pywhlobf = pywhlobf.command_line_interface:main

# Code linting.
[flake8]
max-line-length = 100

ignore =
    # From AllenNLP
    # these rules don't play well with black
    # whitespace before :
    E203
    # line break before binary operator
    W503

    # From Yapf
    # indentation is not a multiple of four,
    E111
    E114
    # visually indented line with same indent as next logical line,
    E129

exclude =
    build/**
    dist/**
    data/**
    doc/**

per-file-ignores =
    # __init__.py files are allowed to have unused imports and lines-too-long
    */__init__.py:F401
    */**/**/__init__.py:F401,E501

    # tests don't have to respect
    #  E731: do not assign a lambda expression, use a def
    #  F403: from module import *’ used; unable to detect undefined names
    #  F405: name may be undefined, or defined from star imports: module
    tests/**:E731,F403,F405

    # scripts don't have to respect
    #  E402: imports not at top of file (because we mess with sys.path)
    scripts/**:E402

# Code formatting.
[yapf]
based_on_style = google
column_limit = 100
dedent_closing_brackets = true
coalesce_brackets = true
split_before_bitwise_operator = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
align_closing_bracket_with_visual_indent = true
allow_multiline_lambdas = true

# Test.
[tool:pytest]
log_level = DEBUG
markers =
    local: only for local dev test.
addopts =
    -m 'not local'
    # --workers auto
